--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "test": "run-p --race dev cy:run"
   },
   "dependencies": {
+    "brotli-webpack-plugin": "^0.5.0",
     "compression": "^1.7.1",
     "cross-env": "^5.1.3",
     "css-loader": "^0.28.7",
